include $(top_srcdir)/Makefile.decl

SUBDIRS=src tests
MAINTAINERCLEANFILES = \
	$(srcdir)/INSTALL \
	$(srcdir)/configure \
	$(srcdir)/Makefile.in \
	$(srcdir)/depcomp \
	$(srcdir)/config.guess \
	$(srcdir)/config.sub \
	$(srcdir)/config.h.in \
	$(srcdir)/config.h.in~ \
	$(srcdir)/compile \
	$(srcdir)/ltmain.sh \
	$(srcdir)/missing \
	$(srcdir)/aclocal.m4 \
	$(srcdir)/install-sh