dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(freejtag, 1.0)


AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE()

AC_PROG_CXX
AC_PROG_LIBTOOL

BOOST_REQUIRE
BOOST_THREADS
BOOST_PROGRAM_OPTIONS
BOOST_DATE_TIME
AM_CPPFLAGS="$AM_CPPFLAGS -DSYSCONFDIR='${sysconfdir}'"
AC_SUBST([AM_CPPFLAGS])

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT

