dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(freejtag, 0.2.0)

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE([foreign subdir-objects])

AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CXX
AC_PROG_LIBTOOL
AM_PROG_CC_C_O

BOOST_REQUIRE

BOOST_ASIO
BOOST_BIND
BOOST_SMART_PTR

BOOST_SYSTEM
BOOST_THREADS
BOOST_PROGRAM_OPTIONS
BOOST_DATE_TIME
BOOST_CHRONO

AM_CPPFLAGS=-DSYSCONFDIR='\"${sysconfdir}\"'
AC_SUBST([AM_CPPFLAGS])

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT

